avoid layout shift on page load

--- a/style/default.sass
+++ b/style/default.sass
@@ -244,6 +244,7 @@ body
       height: 90vh
   .main__contents
     padding-top: 160px
+    height: 1180px
     width: 786px
     .main__content-title__wrapper
       border-bottom: 1px solid $gray
